test/should_not_compile/local_datatype_1.sml
val _ = let datatype t = T
        in T
        end;
